# Edge-Detection-Camera-App

./: README.md  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
app/: CMakeLists.txt  build.gradle
app/opencv-sdk/: README.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/edgedetect/: GLRenderer.kt  GLTextureSurfaceView.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml  colors.xml  styles.xml  themes.xml
web/: index.html  index.ts
